# app/interface/handler/__init__.py
@@ -2,3 +2,4 @@ from .user import *
 from .affiliate import *
 from .item import *
 from .order import *
+from .order_item import *
