# app/interface/handler/dto.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  /home/docs/openapi.yml
-#   timestamp: 2023-05-07T06:13:11+00:00
+#   timestamp: 2023-05-07T07:38:55+00:00
 
 from __future__ import annotations
 
@@ -37,6 +37,10 @@ class Item(BaseModel):
 
 class BaseOrder(BaseModel):
     id: UUID = Field(..., description='注文ID')
+
+
+class BaseOrderItem(BaseModel):
+    id: UUID = Field(..., description='商品明細ID')
 
 
 class CreateUserRequest(BaseModel):
@@ -173,6 +177,16 @@ class UpdateOrderRequest(BaseModel):
     approved_flag: Optional[bool] = Field(False, description='承認フラグ', example=False)
 
 
+class CreateOrderItemRequest(BaseModel):
+    quantity: conint(ge=1) = Field(..., description='個数', example=1)
+    order_id: UUID = Field(..., description='注文ID')
+    item_id: UUID = Field(..., description='商品ID')
+
+
+class UpdateOrderItemRequest(BaseModel):
+    quantity: Optional[conint(ge=1)] = Field(None, description='個数', example=1)
+
+
 class Affiliate(BaseModel):
     id: UUID = Field(..., description='加盟組織ID')
     name: constr(min_length=1, max_length=255) = Field(
@@ -228,5 +242,17 @@ class Order(BaseModel):
         ..., description='届け先住所', example='静岡県沼津市上土町36'
     )
     approved_flag: bool = Field(..., description='承認フラグ', example=False)
+    created_at: datetime = Field(..., description='作成日')
+    updated_at: datetime = Field(..., description='更新日')
     affiliate: Affiliate
     user: User
+    items: Optional[List[BaseOrderItem]] = None
+
+
+class OrderItem(BaseModel):
+    id: UUID = Field(..., description='注文明細ID')
+    quantity: conint(ge=1) = Field(..., description='個数', example=1)
+    created_at: datetime = Field(..., description='作成日')
+    updated_at: datetime = Field(..., description='更新日')
+    order: Order
+    item: Item
