# app/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yml
-#   timestamp: 2023-05-07T06:13:11+00:00
+#   timestamp: 2023-05-07T07:38:55+00:00
 
 from __future__ import annotations
 
@@ -17,12 +17,15 @@ from interface.handler.dto import (
     Affiliate,
     CreateAffiliateRequest,
     CreateItemRequest,
+    CreateOrderItemRequest,
     CreateOrderRequest,
     CreateUserRequest,
     Item,
     Order,
+    OrderItem,
     UpdateAffiliateRequest,
     UpdateItemRequest,
+    UpdateOrderItemRequest,
     UpdateOrderRequest,
     UpdateUserRequest,
     User,
@@ -40,15 +43,31 @@ db = SessionLocal()
 userRepository = UserRepository(db)
 affiliateRepository = AffiliateRepository(db)
 itemRepository = ItemRepository(db)
+orderRepository = OrderRepository(db)
+orderItemRepository = OrderItemRepository(db)
 # service
 # usecase
-userUsecase = UserUsecase(userRepository, affiliateRepository)
+userUsecase = UserUsecase(userRepo=userRepository,
+                          affiliateRepo=affiliateRepository)
 affiliateUsecase = AffiliateUsecase(affiliateRepository)
 itemUsecase = ItemUsecase(itemRepository)
+orderUsecase = OrderUsecase(
+    orderRepo=orderRepository,
+    orderItemRepo=orderItemRepository,
+    userRepo=userRepository,
+    affiliateRepo=affiliateRepository,
+)
+orderItemUsecase = OrderItemUsecase(
+    orderItemRepo=orderItemRepository,
+    orderRepo=orderRepository,
+    itemRepo=itemRepository,
+)
 # handler
 userHandler = UserHandler(userUsecase)
 affiliateHandler = AffiliateHandler(affiliateUsecase)
 itemHandler = ItemHandler(itemUsecase)
+orderHandler = OrderHandler(orderUsecase)
+orderItemHandler = OrderItemHandler(orderItemUsecase)
 
 
 @app.get('/affiliates', response_model=List[Affiliate], tags=['Affiliate'])
@@ -152,6 +171,62 @@ async def put_orders_order_id(order_id: UUID, body: UpdateOrderRequest = ...) ->
 async def delete_orders_order_id(order_id: UUID) -> None:
     return orderHandler.delete_orders_order_id(
         order_id=order_id,
+    )
+
+
+@app.get('/orders/{order_id}/items', response_model=List[OrderItem], tags=['OrderItem'])
+async def get_orders_order_id_items(order_id: UUID) -> List[OrderItem]:
+    return orderItemHandler.get_orders_order_id_items(
+        order_id=order_id,
+    )
+
+
+@app.post('/orders/{order_id}/items', response_model=None, tags=['OrderItem'])
+async def post_orders_order_id_items(
+    order_id: UUID, body: CreateOrderItemRequest = ...
+) -> None:
+    return orderItemHandler.post_orders_order_id_items(
+        order_id=order_id,
+        body=body,
+    )
+
+
+@app.get(
+    '/orders/{order_id}/items/{order_item_id}',
+    response_model=OrderItem,
+    tags=['OrderItem'],
+)
+async def get_orders_order_id_items_order_item_id(
+    order_id: UUID, order_item_id: UUID = ...
+) -> OrderItem:
+    return orderItemHandler.get_orders_order_id_items_order_item_id(
+        order_id=order_id,
+        order_item_id=order_item_id,
+    )
+
+
+@app.put(
+    '/orders/{order_id}/items/{order_item_id}', response_model=None, tags=['OrderItem']
+)
+async def put_orders_order_id_items_order_item_id(
+    order_id: UUID, order_item_id: UUID = ..., body: UpdateOrderItemRequest = ...
+) -> None:
+    return orderItemHandler.put_orders_order_id_items_order_item_id(
+        order_id=order_id,
+        order_item_id=order_item_id,
+        body=body,
+    )
+
+
+@app.delete(
+    '/orders/{order_id}/items/{order_item_id}', response_model=None, tags=['OrderItem']
+)
+async def delete_orders_order_id_items_order_item_id(
+    order_id: UUID, order_item_id: UUID = ...
+) -> None:
+    return orderItemHandler.delete_orders_order_id_items_order_item_id(
+        order_id=order_id,
+        order_item_id=order_item_id,
     )
 
 
