# docs/openapi.yml
@@ -7,6 +7,7 @@ tags:
   - name: Affiliate
   - name: Item
   - name: Order
+  - name: OrderItem
 servers:
   - url: http://localhost:8000
 paths:
@@ -322,6 +323,116 @@ paths:
       responses:
         "200":
           description: Success
+  /orders/{order_id}/items:
+    get:
+      tags:
+        - OrderItem
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/OrderItem"
+    post:
+      tags:
+        - OrderItem
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: "#/components/schemas/CreateOrderItemRequest"
+      responses:
+        "200":
+          description: Success
+  /orders/{order_id}/items/{order_item_id}:
+    get:
+      tags:
+        - OrderItem
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: order_item_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: "#/components/schemas/OrderItem"
+    put:
+      tags:
+        - OrderItem
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: order_item_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: "#/components/schemas/UpdateOrderItemRequest"
+      responses:
+        "200":
+          description: Success
+    delete:
+      tags:
+        - OrderItem
+      parameters:
+        - in: path
+          name: order_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: order_item_id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Success
 
 components:
   schemas:
@@ -385,7 +496,7 @@ components:
           description: 更新日
         affiliate:
           allOf:
-            - "$ref": "#/components/schemas/Affiliate"
+            - $ref: "#/components/schemas/Affiliate"
             - x-backref: users
         orders:
           readOnly: True
@@ -594,21 +705,89 @@ components:
         #   type: string
         #   format: date-time
         #   description: 承認日時
+        created_at:
+          type: string
+          format: date-time
+          x-server-default: Now()
+          description: 作成日
+        updated_at:
+          type: string
+          format: date-time
+          x-server-default: Now()
+          description: 更新日
         affiliate:
           allOf:
-            - "$ref": "#/components/schemas/Affiliate"
+            - $ref: "#/components/schemas/Affiliate"
             - x-backref: orders
         user:
           allOf:
-            - "$ref": "#/components/schemas/User"
+            - $ref: "#/components/schemas/User"
             - x-backref: orders
+        items:
+          readOnly: True
+          type: array
+          items:
+            $ref: "#/components/schemas/BaseOrderItem"
       required:
         - id
         - postcode
         - address
         - approved_flag
+        - created_at
+        - updated_at
         - affiliate
         - user
+    BaseOrderItem:
+      type: object
+      description: 商品明細(Base)
+      properties:
+        id:
+          type: string
+          minLength: 36
+          maxLength: 36
+          format: uuid
+          description: 商品明細ID
+      required:
+        - id
+    OrderItem:
+      type: object
+      description: 注文明細
+      x-tablename: order_items
+      properties:
+        id:
+          type: string
+          maxLength: 36
+          format: uuid
+          description: 注文明細ID
+          x-primary-key: true
+        quantity:
+          type: integer
+          description: 個数
+          minimum: 1
+          example: 1
+        created_at:
+          type: string
+          format: date-time
+          x-server-default: Now()
+          description: 作成日
+        updated_at:
+          type: string
+          format: date-time
+          x-server-default: Now()
+          description: 更新日
+        order:
+          allOf:
+            - $ref: "#/components/schemas/Order"
+            - x-backref: items
+        item:
+          $ref: "#/components/schemas/Item"
+      required:
+        - id
+        - quantity
+        - created_at
+        - updated_at
+        - order
+        - item
     CreateUserRequest:
       type: object
       properties:
@@ -916,3 +1095,35 @@ components:
         #   type: string
         #   format: date-time
         #   description: 承認日時
+    CreateOrderItemRequest:
+      type: object
+      properties:
+        quantity:
+          type: integer
+          description: 個数
+          minimum: 1
+          example: 1
+        order_id:
+          type: string
+          minLength: 36
+          maxLength: 36
+          format: uuid
+          description: 注文ID
+        item_id:
+          type: string
+          minLength: 36
+          maxLength: 36
+          format: uuid
+          description: 商品ID
+      required:
+        - quantity
+        - order_id
+        - item_id
+    UpdateOrderItemRequest:
+      type: object
+      properties:
+        quantity:
+          type: integer
+          description: 個数
+          minimum: 1
+          example: 1
